# MetaWalletGen-CLI

./: LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  enhanced_demo.py  install.py  requirements.txt  run_cli.py  setup.py  test_enhanced_functionality.py
metagen/: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
metagen/.github/workflows/: ci-cd.yml  test-pipeline.yml
metagen/api/: __init__.py  api_client.py  rest_api.py  web_dashboard.py
metagen/config/: .gitignore  pyproject.toml  setup.py
metagen/core/: __init__.py  commands.py  main.py  storage_manager.py
metagen/deployment/: DEPLOYMENT_OPERATIONS_GUIDE.md  Dockerfile  Makefile  PRODUCTION_DEPLOYMENT_CHECKLIST.md  __init__.py  build.bat  build_package.py  deploy_production.py  docker-compose.yml  install_and_test.py  install_unix.sh  install_windows.bat  quick_deploy.sh  requirements.txt
metagen/deployment/docker/: docker-compose.production.yml
metagen/deployment/systemd/: metawalletgen.service
metagen/docs/: ALL_PHASES_COMPLETE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_PACKAGES_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  IMMEDIATE_NEXT_STEPS_COMPLETE.md  PHASE2_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_REORGANIZATION_SUMMARY.md  PROJECT_SUMMARY.md
metagen/enterprise/: __init__.py  analytics.py  audit.py  auth.py  database.py
metagen/logs/: __init__.py
metagen/monitoring/: __init__.py  ci-config.yaml  test_pipeline.py
metagen/performance/: __init__.py  benchmark.py  cache.py  load_balancer.py  monitor.py  optimizer.py
metagen/security/: __init__.py
metagen/tests/: __init__.py  advanced_demo.py  demo.py  simple_demo.py  test_cli.py  test_complete_system.py  test_enhanced_functionality.py  test_installation.py  test_performance_benchmarks.py
metagen/tests/examples/: basic_usage.py
metagen/tests/test_reports/: test_summary.md
metagen/utils/: __init__.py  performance.py  security.py  validators.py
metawalletgen/: __init__.py
metawalletgen/cli/: __init__.py  commands.py  main.py
metawalletgen/core/: __init__.py  encryption.py  storage_manager.py  wallet_generator.py
metawalletgen/utils/: config_manager.py  formatters.py  logger.py  validators.py
public/docs/: ENHANCEMENTS_README.md
