[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metawalletgen-cli"
version = "2.0.0"
description = "A secure command-line tool for generating Ethereum-compatible wallets"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "MetaWalletGen Team", email = "team@metawalletgen.com"}
]
maintainers = [
    {name = "MetaWalletGen Team", email = "team@metawalletgen.com"}
]
keywords = ["ethereum", "wallet", "cryptocurrency", "blockchain", "bip39", "bip44", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "hdwallet>=2.2.1",
    "eth-account>=0.9.0",
    "web3>=6.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
enterprise = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-limiter>=3.0.0",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
metawalletgen = "metagen.main:main"

[project.urls]
Homepage = "https://github.com/your-org/metawalletgen-cli"
Documentation = "https://github.com/your-org/metawalletgen-cli/docs"
Repository = "https://github.com/your-org/metawalletgen-cli"
"Bug Tracker" = "https://github.com/your-org/metawalletgen-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["metagen*"]

[tool.setuptools.package-data]
metagen = [
    "config/*.yaml",
    "config/*.yml",
    "docs/*.md",
    "deployment/*.sh",
    "deployment/*.bat",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["metagen"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["metagen"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
